Fix contrast percentage handling, fixes #1144

--- a/test/less/functions.less
+++ b/test/less/functions.less
@@ -42,6 +42,10 @@
   contrast-dark-thresh: contrast(#000, #111111, #eeeeee, 0.5);
   contrast-high-thresh: contrast(#555, #111111, #eeeeee, 0.6);
   contrast-low-thresh: contrast(#555, #111111, #eeeeee, 0.1);
+  contrast-light-thresh-per: contrast(#fff, #111111, #eeeeee, 50%);
+  contrast-dark-thresh-per: contrast(#000, #111111, #eeeeee, 50%);
+  contrast-high-thresh-per: contrast(#555, #111111, #eeeeee, 60%);
+  contrast-low-thresh-per: contrast(#555, #111111, #eeeeee, 10%);
   format: %("rgb(%d, %d, %d)", @r, 128, 64);
   format-string: %("hello %s", "world");
   format-multiple: %("hello %s %d", "earth", 2);
